fix: alignment

--- a/packages/nc-gui/assets/css/theme-overrides.scss
+++ b/packages/nc-gui/assets/css/theme-overrides.scss
@@ -193,7 +193,6 @@ body {
   select:-webkit-autofill,
   select:-webkit-autofill:hover,
   select:-webkit-autofill:focus {
-    border: 1px solid var(--nc-border-gray-medium);
     -webkit-text-fill-color: var(--nc-content-gray-default);
     -webkit-box-shadow: none;
     box-shadow: none; /* Auto fill input bg color*/
@@ -204,7 +203,7 @@ body {
   textarea,
   .ant-input-affix-wrapper,
   .ant-input-number {
-    &:not(:disabled) {
+    &:not(:disabled):not(:-webkit-autofill) {
       @apply !bg-transparent text-nc-content-gray;
     }
 
